# terraform-openstack-rke2

./: .gitignore  README.md  RKE2.yaml  main.tf  network.tf  outputs.tf  pyproject.toml  s3.tf  secgroup.tf  variables.tf  versions.tf
.github/workflows/: patches.yml
manifests/: cloud-controller-openstack.yaml.tpl  csi-cinder.yaml.tpl
node/: cloud-init.yaml.tpl  customize-chart.sh  customize-charts.sh  main.tf  variables.tf  versions.tf
patches/: rke2-cilium.yaml.tpl
tests/patches/: conftest.py  helpers.py  test_patches.py
tests/patches/snapshots/v1.35.6-rke2r1/: meta.json
tests/patches/snapshots/v1.36.2-rke2r1/: meta.json  rke2-cilium.patch  rke2-coredns.patch
