[project]
name = "terraform-openstack-rke2"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false
default-groups = ["dev"]
required-version = ">=0.11"

[tool.pytest.ini_options]
testpaths = ["tests/patches"]
